# puyoai

./: .gitignore  .gitmodules  .travis.yml  BUILD.gn  CMakeLists.txt  DEPS  GNUmakefile  HOW-TO-BUILD.en.md  LICENSE  Makefile  README.broken  README.md  faq.md  how-to-build-on-cygwin.md  how-to-build-on-cygwin.txt
capture/: CMakeLists.txt  Makefile  README  TODO  capture.cc  capture.h  capture_test.cc  commentator.cc  commentator.h  commentator_test.cc  connect.cc  images.cc  images.h  movie.cc  movie.h  parse_bmp.cc  parse_viddev.cc  source.cc  source.h  util.h  viddev.cc  viddev.h
capture/hidmon-mod/: Makefile  README  avrspx-dos.h  avrspx.h  dos.mak  gr-dmy.c  gr.c  gr.h  hidasp-dos.c  hidasp.c  hidasp.h  hidasp_lib.c  hidcmd.h  icon.rc  monit.c  monit.h  my_monit.c  mymain.c  portlist.c  portlist.h  puyo.sh  test_right3.txt  test_rightleft.txt  test_shourinomai.txt  usbhid.h  util.c  util.h  wiiController.c  wiiController.h
core/: CMakeLists.txt  Makefile  basic_field.h  constant.h  ctrl.cc  ctrl.h  ctrl_test.cc  data.h  decision.cc  decision.h  field.cc  field.h  field_deprecated.cc  field_deprecated.h  field_test.cc  performance_test.cc  plan.cc  plan.h  puyo.h  score.h  state.cc  state.h
cpu/: CMakeLists.txt  Makefile  cpu.inc  cpu_interface.cc  cpu_interface.h
cpu/hamaji/: .gitignore  CMakeLists.txt  Makefile  base.h  conv_decisions.rb  core.cc  core.h  ctrl.cc  db.cc  db.h  eval.cc  eval.h  eval2.cc  eval_base.h  eval_test.cc  field.cc  field.h  field_test.cc  game.h  lps-gtr.sh  lps-gtr2.sh  lps2.sh  mt19937int.h  mutex.h  pipeline.txt  puyodb.html  puyodb.js  rater.cc  rater.h  ratingstats.h  util.h
cpu/hidehiko/: CMakeLists.txt  Makefile
cpu/hiroshimizuno/: CMakeLists.txt  Makefile  f.cc  field_deprecated.cc  hikuitokoro.h  sse.h
cpu/ichikawa/: CMakeLists.txt  Makefile  death_tower.sh  gtr_main.cc  moso15_main.cc  notes.txt  rensabi_main.cc
cpu/mayah/: CMakeLists.txt  ai.cc  base.h  basic_field.cc  drop_decision.h  enemy_info.h  evaluation_feature.cc  evaluation_feature.h  evaluation_feature_collector.h  feature_learned.txt  field.h  field_bit_field.h  field_column_bit_field.h  field_column_bit_field_test.cc  game.cc  game.h  learn.cc  performance_test.cc  plan_evaluation_feature.tab  puyo_possibility.cc  puyo_set.h  rensa_detector.cc  rensa_evaluation_feature.tab  rensa_result.h  run.sh  solver.cc  util.h
cpu/pascal/: .gitignore  CMakeLists.txt  Makefile  ctrl.cc  ctrl.h  data.h  main.cc  main.h
cpu/peria/: .gitignore  CMakeLists.txt  Makefile  TODO  base.h  constant.h  decision.h  field.cc  field.h  field_test.cc  game.cc  game.h  main.cc  player.cc  player.h  player_test.cc
cpu/sample/: CMakeLists.txt  Makefile  sample.cc  sample.h
cpu/shinyak/: .gitignore  CMakeLists.txt  Makefile  TODO  ai.cc  ai.h  ai_manager.cc  ai_manager.h  basic_field.cc  basic_field.h  ctrl.cc  ctrl.h  decision.h  enemy_info.cc  enemy_info.h  enemy_info_test.cc  evaluation_feature.cc  evaluation_feature.h  evaluation_feature.tab  evaluation_feature_collector.cc  evaluation_feature_collector.h  evaluation_feature_double.tab  evaluation_feature_int.tab  evaluation_params.cc  evaluation_params.h  feature.txt  feature_learned.txt  field.cc  field.h  field_bit_field.h  field_bit_field_test.cc  field_evaluator.cc  field_evaluator.h  field_evaluator_test.cc  field_test.cc  game.cc  game.h  interactive.cc  learn.cc  main.cc  (+28 more)
cpu/yhayashi/: Makefile
deprecated/: CMakeLists.txt  README.md
deprecated/capture/: README  capture.h  capture_test.cc  connect.cc  launcher.rb  movie.cc  parse_imgs.cc  parse_movie.cc  source.cc  viddev.h
deprecated/core/: .gitignore  CMakeLists.txt  ctrl.h  decision.h  field.cc  field.h  field_test.cc  key.h  performance_test.cc  position.h  puyo.cc  score.h
deprecated/cpu/: CMakeLists.txt
deprecated/duel/: commentator.cc  commentator.h  commentator_test.cc  connector.cc  cui.cc  field_realtime.cc  field_realtime.h  field_realtime_test.cc  game.cc  game_log.h  gui.cc  ojama_controller.cc  puyofu.cc  screen.h
deprecated/util/: CMakeLists.txt  field_util.h  results_to_csv.rb  tsc.h  util.h
duel/: CMakeLists.txt  Makefile  SDL_kanji.c  commentator.cc  commentator.h  commentator_test.cc  connector.cc  connector.h  connector_manager_base.h  connector_manager_linux.cc  connector_manager_linux.h  connector_manager_windows.cc  connector_manager_windows.h  cui.h  decision.cc  decision.h  duel.cc  field_realtime.cc  field_realtime.h  field_realtime_test.cc  game.cc  game.h  game_log.cc  game_log.h  gui.cc  gui.h  ojama_controller.h  puyofu.cc  puyofu.h  screen.cc  screen.h
src/: .clang-format  BUILD.gn  CMakeLists.txt  README.md
src/audio/: BUILD.gn  CMakeLists.txt  audio_commentator.cc  audio_commentator.h  audio_server.cc  audio_server.h  audio_tester.cc  speak_requester.h  speak_server.h  speaker.h
src/base/: BUILD.gn  CMakeLists.txt  avx.h  base.h  blocking_queue.h  blocking_queue_test.cc  bmi.h  bmi_test.cc  build_config.h  builtin.h  compiler_specific.h  executor.cc  executor.h  file.cc  file.h  file_test.cc  lock.h  macros.h  memory.h  noncopyable.h  path.cc  path.h  port.h  random.cc  random.h  slice.h  small_int_set.h  small_int_set_test.cc  sse.h  sse_test.cc  strings.cc  strings.h  strings_test.cc  time.cc  time.h  time_stamp_counter.cc  time_stamp_counter.h  tsc.cc  unit.h  wait_group.cc  (+1 more)
src/capture/: .gitignore  BUILD.gn  CMakeLists.txt  ac_analyzer.cc  ac_analyzer.h  ac_analyzer_test.cc  analyzer.cc  analyzer.h  analyzer_result_drawer.cc  analyzer_result_drawer.h  capture.cc  capture.gni  capture.h  capture_old.cc  capture_old.h  capture_source.h  color.cc  color.h  color_test.cc  convert_image_60fps.cc  convert_movie_60fps.cc  es_analyzer.cc  es_analyzer.h  gather_images_by_match.cc  image_splitter.cc  images_source.cc  images_source.h  monitor.h  movie_source.cc  movie_source.h  movie_source_key_listener.cc  movie_source_key_listener.h  parse_bmp.cc  parse_box.cc  parse_capture.cc  parse_imgs.cc  parse_movie.cc  (+23 more)
util/: CMakeLists.txt  Config.h.in  Makefile  field_util.h  field_util_test.cc  run_league.rb  tsc.cc  tsc.h
(+1054 files in other folders)
