group("src") {
  deps = [
    "//src/audio",
    "//src/base",
    "//src/core",
    "//src/core/client",
    "//src/core/client/ai",
    "//src/core/pattern",
    "//src/core/plan",
    "//src/core/probability",
    "//src/core/rensa",
    "//src/core/rensa_tracker",
    "//src/experimental",
    "//src/net",
    "//src/learning",
    "//src/solver",
  ]

  if (use_gui) {
    deps += [
      "//src/gui",
    ]
  }
}
